# RustSL-Syscall

./: .gitignore  Cargo.toml  README.md  build.rs  encrypt.py  requirements.txt  tmp_hash_check.py  web.py
config/: plugins.json
encrypt_lib/: aes.py  ipv4.py  ipv6.py  mac.py  uuid.py
gui/: config_manager.py  main_window.py  requirements.txt  ui_components.py  worker.py
rsl-macros/src/: lib.rs
src/: main.rs
src/alloc/: mod.rs  nt_allocate_virtual_memory.rs  nt_map_view_of_section.rs
src/alloc_mem/: mod.rs  nt_allocate_virtual_memory.rs  nt_map_view_of_section.rs
src/api/: alloc.rs  def.rs  exec.rs  mod.rs  types.rs
src/bundle/: bundle.rs  bundle_data.rs  mod.rs
src/decode/: mod.rs
src/decrypt/: aes.rs  ecc.rs  ipv4.rs  ipv6.rs  mac.rs  mod.rs  rc4.rs  uuid.rs  xchacha20.rs
src/exec/: apc.rs  apc_syscall.rs  create_thread.rs  create_thread_syscall.rs  mod.rs
src/exec/early_cascade/: mod.rs  stub.rs
src/exec/early_exception/: mod.rs  wow64.rs
src/exec/early_exception_inject/: mod.rs  stub.rs  wow64.rs
src/exec/entry_point/: mod.rs
src/exec/entry_point_injection/: mod.rs
src/exec/hook_bypass/: handler.rs  mod.rs  ssn_helper.rs
src/exec/hwbp_bypass/: mod.rs
src/exec/pool_party/: mod.rs  structs.rs
src/exec/process_hollowing/: mod.rs
src/guard/: mod.rs
src/load/: embedded.rs  mod.rs  separate.rs
src/load_payload/: mod.rs
src/ntapi/: alloc.rs  def.rs  exec.rs  io.rs  memory.rs  mod.rs  object.rs  process.rs  sync.rs  system.rs  thread.rs  types.rs
src/sandbox/: edge.rs  ip.rs  mod.rs  rdtsc_timing.rs
src/syscall/: freshycalls_syswhispers.rs  hells_halos_tartarus_gate.rs  hw_syscall.rs  mod.rs
src/syscall/common/: env.rs  gadget.rs  hwbp.rs  mod.rs  pe.rs  process.rs  provider.rs  scanner.rs  spoof.rs  ssn.rs  type.rs  unwind_info.rs
src/syscall/hw_syscall/: handler.rs  lifecycle.rs  mod.rs  state.rs
src/syscall/kfd_syscall/: mod.rs  stub.rs
src/utils/: debug.rs  error.rs  handle.rs  hash.rs  http.rs  load_api.rs  mod.rs  remote.rs  veh_hwbp.rs
web/: README.md  WEB_REFACTOR_PLAN.md  app.py  config_loader.py  pipeline.py  requirements.txt  style.py  ui_components.py
